# iot

./: .gitignore  pyproject.toml
src/iot/: __main__.py  main.py
src/net/: __main__.py  main.py
