[project]
name = "iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IoT dev", email = "iot@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0"
]

[tool.uv.build-backend]
module-name = ["iot", "net"]
module-root = "src"

[project.scripts]
iot = "iot.main:app"
net = "net.main:app"

[tool.uv.sources]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
